v0.5.4, <RELEASE DATE HERE>:

* Fixed builds getting skipped if Builder can't find the .build_info file or if the expected .build_info file name changes.

----------------------------------------------------------------

v0.5.3, 07/01/2025:

* Builder now officially ships under the MIT license.
	* I forgot to change the license when I made Builder publicly available - whoops!

----------------------------------------------------------------

v0.5.2, 05/01/2025:

* Fixed a crash when sometimes trying to generate a .sln file.
* Fixed a crash when sometimes trying to build from Visual Studio.
* Fixed the binary folder being called "null" when the build source file doesn't contain a path.
* Fixed "default" build config not getting written to .build_info file in a default build.
* Fixed source files sometimes not getting resolved when the build source file contains a path.
* Fixed duplicate files sometimes not getting treated as duplicates when tracking them in the .build_info file.
* Fixed source file paths sometimes being NULL when serializing a .build_info file.
* Better output in the console when generating a Visual Studio solution.

----------------------------------------------------------------

v0.5.1, 01/01/2025:

* Some of the documentation was out of date; can't be having that!

----------------------------------------------------------------

v0.5.0, 28/12/2024:

* BuildConfig::source_files now supports wildcards.
	* This will make adding source files to your projects a lot less tedious, since you now won't need to tell Builder about every individual new source file that you add.
* BuildConfig::additional_includes and BuildConfig::additional_lib_paths are now arrays of std::strings.
	* This was done because sometimes you want to add something to these arrays that is queried dynamically at runtime (E.G.: based off an environment variable via a call to getenv()) and the memory would otherwise get lost.
* Removed VisualStudioConfig::output_directory.